data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2229.wast
;; 10. **Test 10: Interleaved Blocks and Branch Chains**     - **Description:** Multiple interleaving block sequences with `br` and `br_table` instructions targeting different levels of nesting and producing varied stack results.     - **Constraint:** Checks the correct mapping and handling of interleaved block structures.     - **Mismanagement Check:** Ensures the correct interleaving control flow and correct stack adjustments between interleaved nested blocks.

(assert_invalid
  (module (func $test10
    (block (result i32)
      (block
        (br 1 (i32.const 5))
        (i32.const 3)
      )
      (block (result i32)
        (block (result i32)
          (br_if 0 (i32.const 4))
        )
        (br_table 0 1 2 (i32.const 6))
      )
    )
  ))
  "type mismatch"
)